refactor: - для методов с пагинацией добавлены значения по умолчанию - добавлены модификаторы доступа к полям в тестах - исправлены замечания по коду - добавлены тесты для класса ItemController - добавлены тесты для класса BookingMapper